--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@module-federation/nextjs-mf": "^8.4.10",
     "@module-federation/typescript": "^3.1.3",
+    "@reduxjs/toolkit": "^2.2.7",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
     "webpack": "^5.93.0"
   },
   "devDependencies": {
