--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "app-main",
+  "name": "app-host",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NEXT_PRIVATE_LOCAL_WEBPACK=true next dev",
+    "dev": "NEXT_PRIVATE_LOCAL_WEBPACK=true next dev -p 3000",
     "build": "NEXT_PRIVATE_LOCAL_WEBPACK=true next build",
     "start": "NEXT_PRIVATE_LOCAL_WEBPACK=true next start",
     "lint": "NEXT_PRIVATE_LOCAL_WEBPACK=true next lint"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "^8.4.10",
-    "@module-federation/typescript": "^3.1.3",
-    "@reduxjs/toolkit": "^2.2.7",
+    "@module-federation/nextjs-mf": "8.4.10",
+    "@module-federation/typescript": "3.1.3",
+    "@reduxjs/toolkit": "2.2.7",
     "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-redux": "^9.1.2",
+    "react": "18",
+    "react-dom": "18",
+    "react-redux": "9.1.2",
     "webpack": "^5.93.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "typescript": "^5"
+    "@types/react": "18",
+    "@types/react-dom": "18",
+    "typescript": "5"
   }
 }
